v1.0.3
-------------------
+ imdb_person: methods to retrieve birthname, nicknames, body height and spouses
! imdb: languages() method was broken due to IMDB site changes
+ imdb_person: added method to retrieve mini bio
+ imdb_person: added trivia(), quotes(), trademark() and salary()

v1.0.2 (14.05.2008)
-------------------
+ new method mpaa_reason() reports why the movie was rated PG-* in the USA
+ introduced new class imdb_person with methods to retrieve name, picture
  and filmographies of staff members
+ imdb_person: New method born() to retrieve birthdate and place
+ imdb_person: New method died() does the same for day of death (including
  cause, if available)
* links to staff members on the demo imdb.php page now pointing to the new
  imdb_person.php instead of the IMDB site to give insight into the new classes
  capabilities
! imdb: staff methods (director, cast, writing, producer, composer) did not
  return the persons IMDBID correctly (fixed: the "nm" prefix is now removed)

v1.0.1 (07.05.2008)
-------------------
* code reorganization: Split up the imdb class to create class imdb_base
+ the photo methods now support an optional parameter to retrieve a bigger
  (400x600) image instead of the thumbnail (100x140)
* rewrote alsoknow() to give even better/more matches
! in quotes(), references pointed to the local server instead of imdb site
* replaced hardcoded imdb sites in the demo page by the imdb site configured
! plotoutline() and tagline() were broken due to IMDB site changes
* some optimization of tagline() and plotoutline()
! rating() and votes() returned -1 when movie was not yet rated

v1.0.0 (04.05.2008)
-------------------
! little fix for the MPAA retrieval (thanx to aaron pointing this out and
  providing the fix)
+ added some more checks on valid image and cache directories to prevent
  PHP warnings/errors
+ adding some more comments to the API documentation
! alsoknow() sometimes messed up some AKAs - hopefully fixed.