@@ -4,6 +4,8 @@ v1.0.3
 ! imdb: languages() method was broken due to IMDB site changes
 + imdb_person: added method to retrieve mini bio
 + imdb_person: added trivia(), quotes(), trademark() and salary()
+! fixed a flaw in imdb::photo() (you could not retrieve the thumbnail and the
+  bigger photo in the same run)
 
 v1.0.2 (14.05.2008)
 -------------------
